fix: truncate last breadcrumb link to approx 65 characters

--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -50,7 +50,8 @@
 
     &:last-of-type {
       .uq-breadcrumb__link {
-        max-width: none;
+        max-width: 650px;
+        text-decoration: none;
       }
     }
   }
